se agrega seccion de destacado, contacto y footer

--- a/index.html
+++ b/index.html
@@ -72,8 +72,200 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      
     </header>
+
+    <section class="d-none d-lg-block">
+      <div class="container-h1" id="quienes">
+        <br>
+        <h1 class="text-center">¿QUIENES SOMOS?</h1>
+        <br>
+      </div>
+      <section>
+        <!-- contenedor quienes somos-->
+        <!-- 01  -->
+        <div class="row mb-5 mx-3 justify-content-md-center ">
+          <div class="col-sm-12 col-md-4">
+              <div class="card-body text-center my-auto card-body01">
+                  <a href="#" class="card-link"><i class="fa fa-plane fa-iconos" aria-hidden="true"></i></a>
+              </div>
+              <div class="card card_style card0">
+
+                  <div class="card-body card-body02">
+
+                      <p class="card-text">
+                      <p>
+                          Lorem ipsum dolor sit amet. Est praesentium eaque sed animi illo aut ipsam laudantium
+                          qui
+                          amet enim qui maiores reiciendis nam aspernatur fuga. Aut veritatis deserunt hic fugit
+                          laudantium ea facere obcaecati ea unde nihil aut galisum quod ut quidem ipsa. Ut dolorum
+                          explicabo et placeat sequi non molestiae harum sit architecto quibusdam et optio
+                          voluptas
+                          sit facilis sunt. Aut repudiandae reiciendis qui reiciendis provident sit voluptatem
+                          autem
+                          est harum fugiat sit tempore commodi vel mollitia maxime non provident cupiditate.
+                      </p>
+                      </p>
+                  </div>
+              </div>
+          </div>
+
+          <!-- 02 -->
+          <div class="col-sm-12 col-md-4">
+
+            <div class="card card_style card0">
+
+                <div class="card-body card-body02">
+
+                    <p class="card-text">
+                    <p>
+                        Lorem ipsum dolor sit amet. Est praesentium eaque sed animi illo aut ipsam laudantium
+                        qui
+                        amet enim qui maiores reiciendis nam aspernatur fuga. Aut veritatis deserunt hic fugit
+                        laudantium ea facere obcaecati ea unde nihil aut galisum quod ut quidem ipsa. Ut dolorum
+                        explicabo et placeat sequi non molestiae harum sit architecto quibusdam et optio
+                        voluptas
+                        sit facilis sunt. Aut repudiandae reiciendis qui reiciendis provident sit voluptatem
+                        autem
+                        est harum fugiat sit tempore commodi vel mollitia maxime non provident cupiditate.
+                    </p>
+                    </p>
+                </div>
+
+            </div>
+            <div class="card-body text-center my-auto card-body01">
+                <a href="#" class="card-link"><i class="fa fa-campground fa-iconos" aria-hidden="true"></i></a>
+            </div>
+        </div>
+
+        <!-- 03 -->
+        <div class="col-sm-12 col-md-4">
+          <div class="card-body text-center my-auto card-body01">
+              <a href="#" class="card-link"><i class="fa fa-route fa-iconos" aria-hidden="true"></i></a>
+          </div>
+          <div class="card card_style card0">
+
+              <div class="card-body card-body02">
+
+                  <p class="card-text">
+                  <p>
+                      Lorem ipsum dolor sit amet. Est praesentium eaque sed animi illo aut ipsam laudantium
+                      qui
+                      amet enim qui maiores reiciendis nam aspernatur fuga. Aut veritatis deserunt hic fugit
+                      laudantium ea facere obcaecati ea unde nihil aut galisum quod ut quidem ipsa. Ut dolorum
+                      explicabo et placeat sequi non molestiae harum sit architecto quibusdam et optio
+                      voluptas
+                      sit facilis sunt. Aut repudiandae reiciendis qui reiciendis provident sit voluptatem
+                      autem
+                      est harum fugiat sit tempore commodi vel mollitia maxime non provident cupiditate.
+                  </p>
+                  </p>
+              </div>
+
+          </div>
+      </div>
+      </section>
+    </section>
+
+    <!-- Destacados-->
+    <div class="container-h2">
+      <h1 class="text-white text-center  my-5">Destacados</h1>
+      <br>
+    </div>
+    <section class="container pb-5">
+      <!-- Card -->
+      <div class="row row-cols-1 row-cols-md-4 g-4">
+        <!-- 01 -->
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/card1.jpg" class="card-img-top" alt="card1">
+            <div class="card-body card-body05">
+              <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet. Non sunt deleniti cum nemo consequuntur sed sequi consequatur et exercitationem molestias? </p>
+            </div>
+          </div>
+        </div>
+        <!-- 02 -->
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/card2.jpg" class="card-img-top" alt="card2">
+            <div class="card-body card-body05">
+              <h5 class="card-title">Consectetur adipiscing elit.</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet. Non sunt deleniti cum nemo consequuntur sed sequi consequatur et exercitationem molestias?</p>
+            </div>
+          </div>
+        </div>
+        <!-- 03 -->
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/card3.jpg" class="card-img-top" alt="card3">
+            <div class="card-body card-body05">
+              <h5 class="card-title">Sed do eiudmod tempor inciditunt ut labore.</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet. Non sunt deleniti cum nemo consequuntur sed sequi consequatur et exercitationem molestias?</p>
+            </div>
+          </div>
+        </div>
+        <!-- 04 -->
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/card4.jpg" class="card-img-top" alt="card4">
+            <div class="card-body card-body05">
+              <h5 class="card-title">Ut enim ad minim veniam.</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet. Non sunt deleniti cum nemo consequuntur sed sequi consequatur et exercitationem molestias?</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Contacto -->
+    <section class="Contacto mb-5">
+      <div class="container-h1">
+        <br>
+        <h1 class="text-center">Contacto</h1>
+        <br>
+      </div>
+      <div class="container pb-5">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="CC">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="button" class="btn btn-primary">Enviar</button>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer-page">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 my-auto">
+            <div class="flex-center my-auto ">
+                <h5 class="text-white text-center font-weight-bold  my-1">VIAJES CHILE</h5>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 my-auto">
+            <div class="flex-center my-auto">
+                <!--Github-->
+                <a class="btn btn-outline-light  m-1" href="https://github.com" role="button"><i class="fab fa-github"></i></a>
+                <!--Linkedin -->
+                <a class="btn btn-outline-light  m-1" href="https://cl.linkedin.com" role="button"><i class="fab fa-linkedin-in"></i></a>
+                <!-- Twitter (X) -->
+                <a class="btn btn-outline-light  m-1" href="https://twitter.com/?lang=es" role="button"><i class="fab fa-twitter"></i></a>
+                <!-- Facebook -->
+                <a class="btn btn-outline-light  m-1" href="https://www.facebook.com/" role="button"><i class="fab fa-facebook-f"></i></a>
+            </div>
+        </div>
+        </div>
+
+      </div>
+    </footer>
+
     <!-- SCRIPT -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
