--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!--  NavBar  -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-interno fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="assets/img/viajes.svg" alt="viajes" class="ml-5" height="30px">Viajes Chile
@@ -26,7 +26,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a class="nav-link active" href="#header">Inicio <span class="sr-only">Actual</span></a>
               </li>
