--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-    </header>
+      </header>
 
     <section class="d-none d-lg-block">
       <div class="container-h1" id="quienes">
@@ -136,7 +136,7 @@
                 <a href="#" class="card-link"><i class="fa fa-campground fa-iconos" aria-hidden="true"></i></a>
             </div>
           </div>
-        </div>>
+        </div>
         <!-- 03 -->
         <div class="col-sm-12 col-md-4">
           <div class="card-body text-center my-auto card-body01">
